src/pages/LifeCycleModels/Components/toolbar/styles/index.less
@keyframes animated-line {
  to {
    stroke-dashoffset: -1000;
  }
}

// selection
.x6-node-selected rect {
  stroke: var(--ant-color-primary);
  stroke-width: 1.5px;
}

.x6-widget-selection-box {
  margin-top: -6px;
  margin-left: -6px;
  padding-right: 8px;
  padding-bottom: 8px;
  border: 2px solid var(--ant-color-primary) !important;
  border-radius: 10px;
  outline: 1px solid var(--ant-color-text);
  outline-offset: 1px;
  box-shadow: 0 0 10px 0 var(--ant-color-primary-hover);
}

.x6-edge-selected {
  path:nth-child(2) {
    stroke: var(--ant-color-primary);
    stroke-width: 2px;
  }
}

// snapline
.x6-widget-snapline-horizontal,
.x6-widget-snapline-vertical {
  stroke: var(--ant-color-primary);
}

// transform
.x6-widget-transform {
  margin: -2px 0 0 -2px;
  padding: 0px;
  border: 2px solid var(--ant-color-primary);
  outline: 1px solid var(--ant-color-text);
  outline-offset: 1px;
  box-shadow: 0 0 8px 0 var(--ant-color-primary-hover);
}
.x6-widget-transform > div {
  border: 1px solid var(--ant-color-text);
  background-color: var(--ant-color-bg-container);
  box-shadow: 0 0 0 1px var(--ant-color-primary);
}
.x6-widget-transform > div:hover {
  background-color: var(--ant-color-primary-hover);
}
.x6-widget-transform-active-handle {
  background-color: var(--ant-color-primary);
  box-shadow:
    0 0 0 1px var(--ant-color-text),
    0 0 0 2px var(--ant-color-bg-container);
}
.x6-widget-transform-resize {
  border-radius: 0;
}

// control style
.toolButton {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  border: 1px solid var(--ant-color-border-secondary);
  border-radius: 6px;

  button {
    min-width: 36px !important;
    height: 36px;
    border: 1px solid var(--ant-color-bg-container);
    border-radius: 4px;
    background-color: var(--ant-color-bg-container);
    outline: none;
    user-select: none;
    touch-action: manipulation;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    color: var(--ant-color-text);

    &:disabled {
      background-color: var(--ant-color-fill-tertiary);
      color: var(--ant-color-text-disabled);
    }
    &:hover {
      border: 1px solid var(--ant-color-primary-hover);
    }
  }

  .dropDownBtn {
    width: 100%;
    padding: 0;
  }

  .tippy-box {
    border: none !important;
    box-shadow: var(--ant-box-shadow) !important;
    background-color: var(--ant-color-bg-container);
  }

  .tippy-content {
    width: 60px;
    padding: 4px !important;
  }

  .tippyBtnContent {
    display: flex;
    flex-direction: column;
    align-items: center;

    button {
      width: 100%;
      min-width: 36px !important;

      &:hover {
        border: none !important;
        background-color: var(--ant-color-fill-tertiary);
      }
    }
  }
}

.toolbuttonVertical {
  flex-direction: column;

  button {
    min-width: 40px !important;
  }
}
// control style end

